--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 APP_NAME=GimnasioBodyFit
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:eQZU/TBsZiPWDDgvFNV2fKua2sJO4qnnOWEqZUelakg=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://mail.tecnoweb.org.bo/inf513/grupo01cc/proy/public/build
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
